--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/sea_tide
+    url: jdbc:mysql://localhost:3306/sea_tide?serverTimezone=GMT%2B8
     username: root
     password: mysql
