税收线上测试。

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ repositories {
 	}
 }
 
+bootJar {
+	launchScript()
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
