--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ bootJar {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.auth0:java-jwt:3.5.0'
 	implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 	annotationProcessor 'org.projectlombok:lombok'
